package edu.ntnu.idatt2003.boardgame;

public interface TileAction {
    public void perform(Player player);
}
